<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:id="@+id/postImage"
        android:contentDescription="@string/image_posting"
        app:srcCompat="@drawable/additem"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/post_title"
        android:hint="@string/title_goes_here"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textSize="16sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post_desc"
        android:hint="@string/description_goes_here"
        android:textAlignment="center"
        android:textSize="16sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/post_price"
        android:hint="@string/price_goes_here"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/commententer"
        android:hint="@string/enter_your_comment"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/personName"
        android:hint="@string/enter_your_name"
        android:textAlignment="center" />

    <Button
        android:text="@string/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commentview"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textAlignment="center" />

</LinearLayout>
</android.support.v7.widget.CardView>