<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sriyendapkar.syend.garagesale.Post">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/title"
        android:hint="@string/title"
        android:layout_centerInParent="true"
        android:textAlignment="center" />

    <Button
        android:text="@string/add_item"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:id="@+id/Add_Item"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="400dp"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/price"
        android:hint="@string/price"
        android:textAlignment="center"
        android:layout_above="@+id/Add_Item"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title"
        android:layout_marginBottom="46dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/desc"
        android:hint="@string/description"
        android:textAlignment="center"
        android:layout_above="@+id/price"
        android:layout_alignLeft="@+id/price"
        android:layout_alignStart="@+id/price"
        android:layout_marginBottom="12dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/additem"
        android:id="@+id/newPic"
        android:layout_marginBottom="91dp"
        android:contentDescription="@string/additem"
        android:layout_above="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
